force-app/main/default/objects/PersonLifeEvent/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <label>Event Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NY</fullName>
                <default>true</default>
                <label>NY</label>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>