force-app/main/default/objects/PersonLifeEvent/fields/Event_Subtype_Claim__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype_Claim__c</fullName>
    <label>Event Subtype Claim</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EventType</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Claim</fullName>
                <default>true</default>
                <label>New Claim</label>
            </value>
            <value>
                <fullName>Update Claim</fullName>
            </value>
            <value>
                <fullName>Manage Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>