force-app/main/default/objects/PersonLifeEvent/fields/Event_Subtype_Registration__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype_Registration__c</fullName>
    <label>Event Subtype Registration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EventType</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registering for myself. I was present at the site.</fullName>
            </value>
            <value>
                <fullName>Registering for someone who is incapacitated</fullName>
            </value>
            <value>
                <fullName>Registering for someone who died</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>